Added project pages

--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,13 @@
 <!-- hello this is projects -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles.css" rel="stylesheet">
+  <title>Projects</title>
+</head>
+<body>
+  <div class="sun"></div>
+</body>
+</html>
