--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#top"><h4>HOME</h4></a>
       </div>
       <div>
-        <a href="#projects"><h4>PROJECTS</h4></a>
+        <a href="projects.html"><h4>PROJECTS</h4></a>
       </div>
       <div>
         <a href="#about"><h4>ABOUT</h4></a>
