Plan now: make a astronaut's helmet for the homepage

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,27 @@
   <title>Projects</title>
 </head>
 <body>
-  <div class="sun"></div>
+  <section id="background">
+    <div class="projectSun"></div>
+    <div class="windowGlass"></div>
+    <div class="windowPane"></div>
+    <!-- <div class="leftBar"></div> -->
+    <!-- <div class="upperBlock"></div> -->
+    <!-- <div class="rightBar"></div> -->
+  </section>
+  <section id="navbar">
+      <div>
+        <a href="index.html"><h4>HOME</h4></a>
+      </div>
+      <div>
+        <a href="#top"><h4>PROJECTS</h4></a>
+      </div>
+      <div>
+        <a href="index.html#about"><h4>ABOUT</h4></a>
+      </div>
+      <div>
+        <a href="index.html#footer"><h4>CONTACT</h4></a>
+      </div>
+    </section>
 </body>
 </html>
