--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    <section>
+    <section id="background">
       <div class="sun"></div>
     </section>
     <section id="navbar">
