--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section id="background">
-    <div class="projectSun"></div>
+    <div class="sun"></div>
     <div class="windowGlass"></div>
     <div class="windowPane"></div>
     <!-- <div class="leftBar"></div> -->
