size adjusts better with window

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <!-- <div class="upperBlock"></div> -->
     <!-- <div class="rightBar"></div> -->
   </section>
-  <section id="navbar">
+  <!-- <section id="navbar">
       <div>
         <a href="index.html"><h4>HOME</h4></a>
       </div>
@@ -29,6 +29,6 @@
       <div>
         <a href="index.html#footer"><h4>CONTACT</h4></a>
       </div>
-    </section>
+    </section> -->
 </body>
 </html>
