Big Changes: scraping astronaut, sun, space theme. added more movement and reorganized.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,31 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="styles.css" rel="stylesheet">
+  <link href="../styles.css" rel="stylesheet">
   <title>Projects</title>
 </head>
 <body>
   <section id="background">
     <div class="sun"></div>
-    <div class="windowGlass"></div>
-    <div class="windowPane"></div>
-    <!-- <div class="leftBar"></div> -->
-    <!-- <div class="upperBlock"></div> -->
-    <!-- <div class="rightBar"></div> -->
   </section>
-  <!-- <section id="navbar">
+  <section id="navbar">
       <div>
         <a href="index.html"><h4>HOME</h4></a>
       </div>
-      <div>
-        <a href="#top"><h4>PROJECTS</h4></a>
-      </div>
+      <!-- <div>
+        <a href="projects.html"><h4>PROJECTS</h4></a>
+      </div> -->
       <div>
         <a href="index.html#about"><h4>ABOUT</h4></a>
       </div>
       <div>
         <a href="index.html#footer"><h4>CONTACT</h4></a>
       </div>
-    </section> -->
+    </section>
 </body>
 </html>
