--- a/pages/index.html
+++ b/pages/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles.css" rel="stylesheet">
     <title>Patrick Fry's Portfolio</title>
   </head>
   
   <body>
     <section id="background">
-      <div class="sun"></div>
+      <!-- <div class="sun"></div> -->
     </section>
     <section id="navbar">
       <div>
@@ -35,18 +35,27 @@
     </section>
     <section id="projects">
       <div class="project-card">
-        <img src="assets/space-Invaders.jpg" alt="HER Pawn Game Picture" class="project-responsive">
+        <div class="project-card-colors"></div>
+        <a href="SpaceInvaders.html">
+          <img src="../assets/space-Invaders.jpg" alt="HER Pawn Game Picture" class="project-image">
+        </a>
       </div>
       <div class="project-card">
-        <img src="assets/chess.jpeg" alt="HER Pawn Game Picture" class="project-responsive">
+        <div class="project-card-colors"></div>
+        <a href="HER.html">
+          <img src="../assets/chess.jpeg" alt="HER Pawn Game Picture" class="project-image">
+        </a>
       </div>
       <div class="project-card">
-        <img src="assets/soccer.jpg" alt="Soccer CAS Picture" class="project-responsive">
+        <div class="project-card-colors"></div>
+        <a href="CAS.html">
+          <img src="../assets/soccer.jpg" alt="Soccer CAS Picture" class="project-image">
+        </a>
       </div>
     </section>
     <section id="about">
       <div>
-        <img src="assets/ME-Crop.jpeg" alt="Picture of Patrick" class="about-responsive">
+        <img src="../assets/ME-Crop.jpeg" alt="Picture of Patrick" id="my-pic">
       </div>
       <div>
         <h2>
@@ -54,10 +63,10 @@
         </h2>
         <p>
           I was originally born in the Florida Panhandle and after
-          spending some time in Portales, NM, I decided to move back to 
-          albuqueruque to study computer science at UNM. since graduating 
-          i have taught myself web development n my free time i love
-          to play the guitar sand volleyball and video games
+          spending some time in Portales, NM, I decided to move to 
+          Albuqueruque to study computer science at UNM. I love
+          to play my guitar, sand volleyball and since graduating 
+          I have loved teaching myself web development.
         </p>
       </div>
       
@@ -68,10 +77,10 @@
       </div>
       <div>
         <a href="https://github.com/PatFry" target="_blank">
-          <img src="assets/github-mark-white.png" alt="GitHub" width="24" height="24">
+          <img src="../assets/github-mark-white.png" alt="GitHub" width="24" height="24">
         </a>
       </div>
     </section>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
