cleaned up a bit and chose a background for the website

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,32 +6,43 @@
     <link href="../styles.css" rel="stylesheet">
     <title>Patrick Fry's Portfolio</title>
   </head>
-  
   <body>
-    <section id="background">
-      <!-- <div class="sun"></div> -->
-    </section>
     <section id="navbar">
       <div>
-        <a href="#top"><h4>HOME</h4></a>
+        <a href="#top"><p>HOME</p></a>
       </div>
       <div>
-        <a href="projects.html"><h4>PROJECTS</h4></a>
+        <a href="projects.html"><p>PROJECTS</p></a>
       </div>
       <div>
-        <a href="#about"><h4>ABOUT</h4></a>
+        <a href="#about"><p>ABOUT</p></a>
       </div>
       <div>
-        <a href="#footer"><h4>CONTACT</h4></a>
+        <a href="#footer"><p>CONTACT</p></a>
       </div>
     </section>
     <section id="hero">
-      <h1>
-        Patrick Fry
-      </h1>
-      <h3>
-        Computer Science Graduate
-      </h3>
+      <div class="hero-content">
+        <div>
+          <h3>
+            Hello, I'm
+          </h3>
+          <h1>
+            Patrick Fry
+          </h1>
+          <h3>
+            And I am a Frontend developer
+          </h3>
+          <p>
+            I am Web Designer with a bachelor's in computer science
+            and 3+ years of experience working with various programming 
+            languages such as HTML, CSS, Javascript, Java, Python 
+          </p>
+        </div>
+        <div>
+          <img src="../assets/ME-Crop.jpeg" alt="Picture of Patrick" id="my-pic">
+        </div>
+      </div>
     </section>
     <section id="projects">
       <div class="project-card">
@@ -69,7 +80,6 @@
           I have loved teaching myself web development.
         </p>
       </div>
-      
     </section>
     <section id="footer">
       <div>
