--- a/pages/SpaceInvaders.html
+++ b/pages/SpaceInvaders.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link href="../styles.css" rel="stylesheet">
+    <title>Space Invaders</title>
+  </head>
+  <body>
+    <section id="background">
+
+    </section>
+  </body>
 </html>
