Fixed font spacing and setup new structure without multiple pages.

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,8 +22,7 @@
       </div>
     </section>
     <section id="hero">
-      <div class="hero-content">
-        <div>
+        <div class="hero-text">
           <h3>
             Hello, I'm
           </h3>
@@ -42,33 +41,54 @@
         <div>
           <img src="../assets/ME-Crop.jpeg" alt="Picture of Patrick" id="my-pic">
         </div>
-      </div>
     </section>
     <section id="projects">
-      <div class="project-card">
-        <div class="project-card-colors"></div>
-        <a href="SpaceInvaders.html">
-          <img src="../assets/space-Invaders.jpg" alt="HER Pawn Game Picture" class="project-image">
-        </a>
+      <div class="project-row">
+        <div class="project-card">
+          <div class="project-card-colors"></div>
+          <a href="SpaceInvaders.html">
+            <img src="../assets/space-Invaders.jpg" alt="HER Pawn Game Picture" class="project-image">
+          </a>
+        </div>
+        <div class="project-text">
+          <h3>Space Invaders Clone</h3>
+          <p>Lead a group to create a clone of the iconic arcade game,
+            Space Invaders, using Java/JavaFX. This version uses a 
+            client/server to allow for muliplayer!
+          </p>
+        </div>
       </div>
-      <div class="project-card">
-        <div class="project-card-colors"></div>
-        <a href="HER.html">
-          <img src="../assets/chess.jpeg" alt="HER Pawn Game Picture" class="project-image">
-        </a>
+      <div class="project-row">
+        <div class="project-text">
+          <h3>CAS Research</h3>
+          <p> Using Python</p>
+        </div>
+        <div class="project-card">
+          <div class="project-card-colors"></div>
+          <a href="HER.html">
+            <img src="../assets/chess.jpeg" alt="HER Pawn Game Picture" class="project-image">
+          </a>
+        </div>
+        
       </div>
-      <div class="project-card">
-        <div class="project-card-colors"></div>
-        <a href="CAS.html">
-          <img src="../assets/soccer.jpg" alt="Soccer CAS Picture" class="project-image">
-        </a>
+      <div class="project-row">
+        <div class="project-card">
+          <div class="project-card-colors"></div>
+          <a href="CAS.html">
+            <img src="../assets/soccer.jpg" alt="Soccer CAS Picture" class="project-image">
+          </a>
+        </div>
+        <div class="project-text">
+          <h3>HER Pawn Game</h3>
+          <p>hola</p>
+        </div>
       </div>
     </section>
     <section id="about">
       <div>
         <img src="../assets/ME-Crop.jpeg" alt="Picture of Patrick" id="my-pic">
       </div>
-      <div>
+      <div class="about-text">
         <h2>
           More about me!
         </h2>
