--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,16 +13,16 @@
   </section>
   <section id="navbar">
       <div>
-        <a href="index.html"><h4>HOME</h4></a>
+        <a href="index.html"><p>HOME</p></a>
       </div>
       <!-- <div>
         <a href="projects.html"><h4>PROJECTS</h4></a>
       </div> -->
       <div>
-        <a href="index.html#about"><h4>ABOUT</h4></a>
+        <a href="index.html#about"><p>ABOUT</p></a>
       </div>
       <div>
-        <a href="index.html#footer"><h4>CONTACT</h4></a>
+        <a href="index.html#footer"><p>CONTACT</p></a>
       </div>
     </section>
 </body>
